# AmyPET

./: .gitignore  .mailmap  .pre-commit-config.yaml  LICENCE.md  README.rst  hugo.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: hugo.yaml  test.yml
amypad/: __init__.py  __main__.py  blsa_xnat_process.py  cli.py  gui.py  rectrim.py  utils.py
amypad/centiloid/: Pipeline_Centiloid_BBRC.m  __init__.py  f_1CorregisterEstimate.m  f_2CorregisterEstimate.m  f_3Segment.m  f_4Normalise.m  f_Quant_centiloid.m  f_acpcReorientation.m  f_noNaN.m  pipeline.py
amypet/: __init__.py  __main__.py  _backend_web.py  align.py  align_brkdyn_ct.py  amypet_config.py  amypet_process_1.py  aux.py  backend_centiloid.py  centiloid.py  dcm2nii.py  dyn_tools.py  ge_cmap.py  gif.py  gui.py  imscroll.py  imtrimup.py  params.toml  preproc.py  proc.py  suvr_tools.py  ur_tools.py  utils.py  web.py
amypet/CL_masks/: voi_ctx_2mm.nii
amypet/centiloid/: __init__.py  f_1CorregisterEstimate.m
amypet/centiloid_old/: __init__.py  f_2CorregisterEstimate.m  f_4Normalise.m  f_noNaN.m
amypet/cl_anchor_tables/: CL_PiB_anchors.pkl  suvr_fbp_to_suvr_pib__transform.pkl
amypet/data/CL_masks/: voi_CerebGry_2mm.nii  voi_Pons_2mm.nii  voi_WhlCblBrnStm_2mm.nii  voi_WhlCbl_2mm.nii
amypet/data/atlas/: AAL3v1.nii.txt  DKT_Desikan.csv
amypet/data/cl_anchor_tables/: suvr_fbb_to_suvr_pib__transform.pkl  suvr_flute_to_suvr_pib__transform.pkl
cl_scripts/: amypet_petpp.py  amypet_process.py  centi.py  centi_fbb.py  centi_fbp.py  centi_flt.py  centi_pib.py
content/en/: _index.md
content/en/about/: index.md
content/en/docs/: _index.md  overview.md
content/en/docs/getting-started/: _index.md
content/en/docs/tutorials/: _index.md  cl_proc.md  mni.md  native.md  standard-mni.md  tutorial2.md
docs/: index.md
params/: amypet_params.py
scripts/: amypet_gif.py  cl.py
tests/: conftest.py  test_cli.py  test_dcm2nii.py  test_gif.py  test_imtrimup.py  test_rectrim.py
