[metadata]
name=amypad
description=Amyloid imaging to prevent Alzheimer's Disease
long_description=file: README.rst
long_description_content_type=text/x-rst
license=MPL 2.0
license_file=LICENCE.md
url=https://amypad.eu
project_urls=
    Repository=https://github.com/AMYPAD/amypad
    Changelog=https://github.com/AMYPAD/amypad/releases
    Documentation=https://github.com/AMYPAD/amypad/#amypad
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=pet, alzheimers
platforms=any
provides=amypad
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: System :: Installation/Setup
    Topic :: Utilities
[options]
zip_safe=False
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
install_requires=
    argopt
    miutil[cuda,nii]>=0.8.0
    niftypad>=1.1.1
    nimpa
    setuptools
    shtab>1.3.2
    spm12
    tqdm
include_package_data=True
packages=find:
python_requires=>=3.6
[options.extras_require]
dev=
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
gui=Gooey>=1.0.8
niftypet=niftypet>=0.0.1
[options.entry_points]
console_scripts=
    amypad=amypad.cli:main
    amypad.gui=amypad.gui:main
[options.packages.find]
exclude=tests
[options.package_data]
*=*.md, *.rst, *.m, *.png

[flake8]
max_line_length=99
extend-ignore=E261,P1
exclude=.git,__pycache__,build,dist,.eggs

[yapf]
spaces_before_comment=15, 20
arithmetic_precedence_indication=true
allow_split_before_dict_value=false
coalesce_brackets=True
column_limit=99
each_dict_entry_on_separate_line=False
space_between_ending_comma_and_closing_bracket=False
split_before_named_assigns=False
split_before_closing_bracket=False

[isort]
profile=black
line_length=99
known_first_party=amypad,tests

[tool:pytest]
timeout=10
log_level=INFO
python_files=tests/test_*.py
addopts=-v --tb=short -rxs -W=error -n=auto --durations=0 --durations-min=1 --cov=amypad --cov-report=term-missing --cov-report=xml
